[project]
name = "mtcli-vwap"
version = "1.0.1"
description = "Plugin mtcli da VWAP"
authors = [
    {name = "Valmir França da Silva",email = "vfranca3@gmail.com"}
]
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mtcli>=1.18.1",
    "pandas (>=2.3.3,<3.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "metatrader5 (>=5.0.5430,<6.0.0)"
]

[project.entry-points."mtcli.plugins"]
mtcli_vwap = "mtcli_vwap.plugin:register"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
pytest-cov = "^7.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
pymdown-extensions = "^10.16.1"

